--- a/client/sass/_merchants.sass
+++ b/client/sass/_merchants.sass
@@ -73,7 +73,7 @@
       padding: 0 0 10px
       .view-profile
         float: right
-        margin: 5px
+        margin: 5px 5px 10px 10px
       .tweet_time, .post_time
         display: block
         color: $subtle_color
