Google search for merchants is working (but not pretty)

--- a/frontend/sass/_merchants.sass
+++ b/frontend/sass/_merchants.sass
@@ -97,6 +97,29 @@
     p
       margin: 0.5em 0.2em
 
+  .merchant-search
+    h4
+      font-size: 13px
+      line-height: 1.4em
+      margin: 0 0 0.35em
+      em
+        font-weight: bold
+        font-style: normal
+    .merchant-search-form
+      .ui-button
+        float: left
+        margin: 0 !important
+        .ui-button-text
+          padding-top: 6px
+          padding-bottom: 6px
+      .search-field
+        float: left
+        width: 200px
+        margin: 0 5px 0 0
+
+    .merchant-search-results
+      clear: both
+
 #feedback, #sales-chart
   h3
     margin: 0 0 0.5em
