More work on the merchant sidebar search tools, including a prompt to show how it's used.

--- a/frontend/views/member-timeline/merchant_search.handlebars
+++ b/frontend/views/member-timeline/merchant_search.handlebars
@@ -3,4 +3,14 @@
   <input type="text" class="search-field" value="{{defaultSearch}}" />
   <button class="search">Search</button>
 </div>
-<div class="merchant-search-results">Searching ...</div>
+<div class="prompt" style="display: none;">
+  <a href="#" class="hide-message">Hide this message</a>
+  <h2>Why should I look up this merchant's details?</h2>
+  <p>(Some text here about the benefits of associating the transaction with a real merchant and a description of how doing so helps the system learn that information so it doesn't have to be searched for every time.)</p>
+  <div class="screenshot">
+    <img src="/images/prompts/merchants/sidebar_example.png" alt="Example Sidebar" />
+    <p class="meta">Example merchant sidebar</p>
+  </div>
+</div>
+
+<div class="branding">Merchant search powered by <img src="https://www.google.com/uds/css/small-logo.png" class="gsc-branding-img-noclear"></div>
