--- a/frontend/views/member-timeline/merchant_search_result.handlebars
+++ b/frontend/views/member-timeline/merchant_search_result.handlebars
@@ -1,2 +1,5 @@
-<div class="title">{{title}}</div>
-<div class="address">{{{address}}}</div>
+<ul class="buttons">
+  <li><button class="choose">Choose</button></li>
+</ul>
+<h3>{{title}}</h3>
+<p>{{{address}}}</p>
