--- a/frontend/sass/_base.sass
+++ b/frontend/sass/_base.sass
@@ -56,6 +56,7 @@ textarea
     background: #F6FAFD
     margin: 15px 0 0 590px
     +border-right-radius(8px)
+    height: 100%
     min-height: 1000px
     position: relative
     &.selected
