--- a/frontend/sass/_merchants.sass
+++ b/frontend/sass/_merchants.sass
@@ -98,6 +98,17 @@
       margin: 0.5em 0.2em
 
   .merchant-search
+    .branding
+      position: absolute
+      bottom: -17px
+      right: 0
+      font-size: 10px
+      color: #333
+      line-height: 15px
+      img
+        display: inline-block
+        position: relative
+        top: 5px
     h4
       font-size: 13px
       line-height: 1.4em
@@ -106,6 +117,7 @@
         font-weight: bold
         font-style: normal
     .merchant-search-form
+      +clearfix
       .ui-button
         float: left
         margin: 0 !important
@@ -114,11 +126,21 @@
           padding-bottom: 6px
       .search-field
         float: left
-        width: 200px
+        width: 195px
         margin: 0 5px 0 0
 
     .merchant-search-results
-      clear: both
+      margin: 5px 0 0 0
+      border: 1px solid #ddd
+      background: #fff
+      max-height: 250px
+      overflow: auto
+      ul
+        +list-with-buttons('result')
+        p
+          font-size: 11px
+          color: #333
+          margin: 0.2em 0
 
 #feedback, #sales-chart
   h3
