Initial merchant creation tool (should eventually be a merchant "Suggestion" tool)

--- a/frontend/sass/_timeline.sass
+++ b/frontend/sass/_timeline.sass
@@ -52,7 +52,7 @@ table#timeline
             line-height: 1em
             &:hover, &.active
               +opacity(1)
-          .offer, .feedback
+          .offer, .feedback, .meta
             margin: 0
             font-size: 10px
             color: $subtle_color
