--- a/public/javascripts/compiled/views/social/facebook/post.handlebars
+++ b/public/javascripts/compiled/views/social/facebook/post.handlebars
@@ -1,2 +1,2 @@
 <span class="post_text">{{message}}</span>
-<span class="post_time"><a href="http://facebook.com/{{username}}">about {{date}}</a> on Facebook</span>
+<span class="post_time"><a href="http://facebook.com/{{username}}">{{date}}</a> on Facebook</span>
