--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1757,26 +1757,45 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #merchant-view .social .twitter, #merchant-view .social .facebook {
   clear: both;
   padding: 0 0 10px;
+  min-height: 50px;
 }
 /* line 32, ../../../frontend/sass/_ui_mixins.sass */
 #merchant-view .social .twitter .form .ui-button .ui-button-text, #merchant-view .social .facebook .form .ui-button .ui-button-text {
   font-size: 10px;
 }
-/* line 53, ../../../frontend/sass/_merchants.sass */
+/* line 54, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social .twitter .form input.text, #merchant-view .social .facebook .form input.text {
   width: 220px;
 }
-/* line 55, ../../../frontend/sass/_merchants.sass */
-#merchant-view .social .twitter .view-profile, #merchant-view .social .facebook .view-profile {
+/* line 56, ../../../frontend/sass/_merchants.sass */
+#merchant-view .social .twitter .icon-and-vote, #merchant-view .social .facebook .icon-and-vote {
   float: right;
+  width: 32px;
   margin: 5px 5px 10px 10px;
 }
-/* line 58, ../../../frontend/sass/_merchants.sass */
+/* line 61, ../../../frontend/sass/_merchants.sass */
+#merchant-view .social .twitter .icon-and-vote .vote, #merchant-view .social .facebook .icon-and-vote .vote {
+  display: block;
+  background: url(/images/vote.png) no-repeat 50% 50%;
+  height: 22px;
+  width: 22px;
+  text-indent: -5000px;
+  opacity: 0.2;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+}
+/* line 68, ../../../frontend/sass/_merchants.sass */
+#merchant-view .social .twitter .icon-and-vote .vote:hover, #merchant-view .social .facebook .icon-and-vote .vote:hover {
+  opacity: 0.6;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
+}
+/* line 70, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social .twitter .tweet_time, #merchant-view .social .twitter .post_time, #merchant-view .social .facebook .tweet_time, #merchant-view .social .facebook .post_time {
   display: block;
   color: #999999;
 }
-/* line 61, ../../../frontend/sass/_merchants.sass */
+/* line 73, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social .twitter .tweet_time a, #merchant-view .social .twitter .post_time a, #merchant-view .social .facebook .tweet_time a, #merchant-view .social .facebook .post_time a {
   color: #999999;
 }
@@ -1784,12 +1803,12 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #merchant-view .social .twitter .tweet_time a:hover, #merchant-view .social .twitter .post_time a:hover, #merchant-view .social .facebook .tweet_time a:hover, #merchant-view .social .facebook .post_time a:hover {
   color: #0066dd;
 }
-/* line 63, ../../../frontend/sass/_merchants.sass */
+/* line 75, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social .twitter {
   border-bottom: 1px solid #e3e3e3;
   margin-bottom: 10px;
 }
-/* line 67, ../../../frontend/sass/_merchants.sass */
+/* line 79, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social .twitter .latest-tweet .tweet_list {
   list-style: none;
   margin: 0;
@@ -1803,7 +1822,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   list-style-type: none;
   margin-left: 0px;
 }
-/* line 70, ../../../frontend/sass/_merchants.sass */
+/* line 82, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social p.security {
   border-top: 1px solid #e3e3e3;
   font-size: 10px;
@@ -1811,15 +1830,15 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   background: url(/images/icons/lock.png) no-repeat left 15px;
   padding: 10px 0 0 25px;
 }
-/* line 76, ../../../frontend/sass/_merchants.sass */
+/* line 88, ../../../frontend/sass/_merchants.sass */
 #merchant-view .feedback {
   padding: 15px 0 0;
 }
-/* line 78, ../../../frontend/sass/_merchants.sass */
+/* line 90, ../../../frontend/sass/_merchants.sass */
 #merchant-view .feedback p {
   margin: 0.5em 0.2em;
 }
-/* line 82, ../../../frontend/sass/_merchants.sass */
+/* line 94, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .branding {
   position: absolute;
   bottom: -17px;
@@ -1828,45 +1847,45 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   color: #333333;
   line-height: 15px;
 }
-/* line 89, ../../../frontend/sass/_merchants.sass */
+/* line 101, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .branding img {
   display: inline-block;
   position: relative;
   top: 5px;
 }
-/* line 93, ../../../frontend/sass/_merchants.sass */
+/* line 105, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search h4 {
   font-size: 13px;
   line-height: 1.4em;
   margin: 0 0 0.35em;
 }
-/* line 97, ../../../frontend/sass/_merchants.sass */
+/* line 109, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search h4 em {
   font-weight: bold;
   font-style: normal;
 }
-/* line 100, ../../../frontend/sass/_merchants.sass */
+/* line 112, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 102, ../../../frontend/sass/_merchants.sass */
+/* line 114, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form .ui-button {
   float: left;
   margin: 0 !important;
 }
-/* line 105, ../../../frontend/sass/_merchants.sass */
+/* line 117, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form .ui-button .ui-button-text {
   padding-top: 6px;
   padding-bottom: 6px;
 }
-/* line 108, ../../../frontend/sass/_merchants.sass */
+/* line 120, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form .search-field {
   float: left;
   width: 195px;
   margin: 0 5px 0 0;
 }
-/* line 113, ../../../frontend/sass/_merchants.sass */
+/* line 125, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-results {
   margin: 5px 0 0 0;
   border: 1px solid #dddddd;
@@ -1874,7 +1893,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   max-height: 250px;
   overflow: auto;
 }
-/* line 119, ../../../frontend/sass/_merchants.sass */
+/* line 131, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-results ul {
   list-style: none;
   margin: 0;
@@ -1945,24 +1964,24 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #merchant-view .merchant-search .merchant-search-results ul li.result ul.buttons .ui-button .ui-button-text {
   font-size: 10px;
 }
-/* line 121, ../../../frontend/sass/_merchants.sass */
+/* line 133, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-results ul p {
   font-size: 11px;
   color: #333333;
   margin: 0.2em 0;
 }
 
-/* line 127, ../../../frontend/sass/_merchants.sass */
+/* line 139, ../../../frontend/sass/_merchants.sass */
 #feedback h3, #sales-chart h3 {
   margin: 0 0 0.5em;
   font-size: 14px;
 }
 
-/* line 131, ../../../frontend/sass/_merchants.sass */
+/* line 143, ../../../frontend/sass/_merchants.sass */
 #feedback {
   padding: 10px 0 0 0;
 }
-/* line 133, ../../../frontend/sass/_merchants.sass */
+/* line 145, ../../../frontend/sass/_merchants.sass */
 #feedback #feedback-list {
   list-style: none;
   margin: 0;
@@ -2035,7 +2054,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #feedback #feedback-list li.feedback ul.buttons .ui-button .ui-button-text {
   font-size: 10px;
 }
-/* line 138, ../../../frontend/sass/_merchants.sass */
+/* line 150, ../../../frontend/sass/_merchants.sass */
 #feedback #feedback-list li p.comment {
   margin: 0 0 0.2em;
 }
