--- a/frontend/views/member-timeline/social.handlebars
+++ b/frontend/views/member-timeline/social.handlebars
@@ -1,6 +1,9 @@
 <div class="twitter">
   {{#twitter_username}}
-    <a href="http://twitter.com/{{.}}" class="view-profile" target="_blank"><img src="/images/twitter-button.png" /></a>
+    <div class="icon-and-vote">
+      <a href="http://twitter.com/{{.}}" class="view-profile" target="_blank"><img src="/images/twitter-button.png" /></a>
+      <a href="#" class="vote">Vote</a>
+    </div>
   {{/twitter_username}}
   <div class="latest-tweet">
   {{^twitter_username}}
@@ -14,7 +17,10 @@
 
 <div class="facebook">
   {{#facebook_username}}
-    <a href="http://facebook.com/{{.}}" class="view-profile" target="_blank"><img src="/images/facebook-button.png" /></a>
+    <div class="icon-and-vote">
+      <a href="http://facebook.com/{{.}}" class="view-profile" target="_blank"><img src="/images/facebook-button.png" /></a>
+      <a href="#" class="vote">Vote</a>
+    </div>
   {{/facebook_username}}
   <div class="latest-post">
     {{^facebook_username}}
@@ -27,5 +33,5 @@
 </div>
 
 <p class="security">
-  Don't trust Facebook or Twitter with your financial information? That's ok -- <a href="#">neither do we</a>.
+  Don't trust Twitter or Facebook with your financial information? That's ok -- <a href="#">neither do we</a>.
 </p>
