Reduced width of in-timeline comment textarea so it didn't squeeze the left-hand column.

--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1537,44 +1537,45 @@ table#timeline tbody tr td.name div.comment h4 {
 }
 /* line 95, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr td.name div.comment textarea {
-  height: 50px;
+  height: 70px;
   font-size: 12px;
+  width: 362px;
 }
-/* line 99, ../../../frontend/sass/_timeline.sass */
+/* line 100, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr td.name div.comment .buttons button {
   float: right;
   margin: 0 0 0 10px;
 }
-/* line 104, ../../../frontend/sass/_timeline.sass */
+/* line 105, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr th {
   font-weight: normal;
 }
-/* line 107, ../../../frontend/sass/_timeline.sass */
+/* line 108, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr.repeat-date td, table#timeline tbody tr.repeat-date th {
   border-top: 1px solid #e3eff7;
 }
-/* line 110, ../../../frontend/sass/_timeline.sass */
+/* line 111, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr.repeat-date td.date span {
   display: none;
 }
-/* line 113, ../../../frontend/sass/_timeline.sass */
+/* line 114, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr:nth-child(odd) td, table#timeline tbody tr:nth-child(odd) th {
   background: #f6fafd;
 }
-/* line 116, ../../../frontend/sass/_timeline.sass */
+/* line 117, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr:first-child td, table#timeline tbody tr:first-child th {
   border-top: none;
 }
-/* line 119, ../../../frontend/sass/_timeline.sass */
+/* line 120, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr.selected td, table#timeline tbody tr.selected th {
   border-top-color: #dddddd;
   background: #f1f1f1;
 }
-/* line 123, ../../../frontend/sass/_timeline.sass */
+/* line 124, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr.reward td, table#timeline tbody tr.reward th {
   color: #009900;
 }
-/* line 126, ../../../frontend/sass/_timeline.sass */
+/* line 127, ../../../frontend/sass/_timeline.sass */
 table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr th {
   border-top-color: #e3e3e3;
 }
