--- a/frontend/sass/_timeline.sass
+++ b/frontend/sass/_timeline.sass
@@ -93,8 +93,9 @@ table#timeline
             h4
               margin-bottom: 0
             textarea
-              height: 50px
+              height: 70px
               font-size: 12px
+              width: 362px
             .buttons
               button
                 float: right
