Removed Facebook integration (temporarily, at least)

--- a/frontend/views/member-timeline/social.handlebars
+++ b/frontend/views/member-timeline/social.handlebars
@@ -15,23 +15,6 @@
   </div>
 </div>
 
-<div class="facebook">
-  {{#facebook_username}}
-    <div class="icon-and-vote">
-      <a href="http://facebook.com/{{.}}" class="view-profile" target="_blank"><img src="/images/facebook-button.png" /></a>
-      <a href="#" class="vote">Vote</a>
-    </div>
-  {{/facebook_username}}
-  <div class="latest-post">
-    {{^facebook_username}}
-    <div class="form">
-      <input type="text" placeholder="Facebook username for {{name}}" class="text" />
-      <button>Add</button>
-    </div>
-    {{/facebook_username}}
-  </div>
-</div>
-
 <p class="security">
-  Don't trust Twitter or Facebook with your financial information? That's ok -- <a href="#">neither do we</a>.
+  Don't trust Twitter with your financial information? That's ok -- <a href="#">neither do we</a>.
 </p>
